# llvm-module-pass-template

./: CMakeLists.txt  README.md  build-modulepass.sh
module-pass/: CMakeLists.txt  modulepass.hpp  passrunner.cpp  passrunner.hpp  utilities.hpp
test/: mp_test.c  test_script.sh
